random view, likes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "video-search",
   "version": "0.1.0",
+  "homepage": "https://danburfield.com/video-search/", 
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
